# cprj

./: CMakeLists.txt  README.md  bak.c  build.sh  candidate.tmp.bak  fpga_trigg.sh  main.c
app/: app_init.c  app_init.h  cr190.c  cr190.h  crc16.c  serial.c  serial.h  trigg_block.c  trigg_block.h  trigg_crypto.c  trigg_crypto.cpp  trigg_crypto.h  trigg_miner.c  trigg_miner.h  trigg_rand.c  trigg_rand.h  trigg_util.c  trigg_util.h  upstream.c  upstream.h
app/crminer/dev/: devices.h
app/serial/: CMakeLists.txt  main.c  serial.c  serial.h
app/serial/dev/: cr190.c  cr190.h  devices.c
app/template/: CMakeLists.txt  init.c  main.c  template.c  template.h  user_app.c  user_app.h
app/test/: CMakeLists.txt  main.c
app/test_que/: CMakeLists.txt  main.c
app/test_udp/: CMakeLists.txt  main.c
app/testlib/: CMakeLists.txt  main.c
app/trigg_miner/: CMakeLists.txt  app_init.h  cr190.c  cr190.h  devices.c  fpga_trigg.sh  main.c  serial.c  serial.h  sha256.c  sha256.h  trigg_block.h  trigg_crc16.c  trigg_crc16.h  trigg_crypto.c  trigg_crypto.h  trigg_miner.c  trigg_miner.h  trigg_util.c  trigg_util.h  upstream.c  upstream.h
app/udp_client/: CMakeLists.txt  main.c  udp_client.c  udp_client.h
app/udp_server/: CMakeLists.txt  main.c  udp_server.c  udp_server.h
argparser/: argparser.c  argparser.h
common/: common.c  common.h
core/: core.c  core.h  start.c
crypto/: sha256.c
doc/: Doxyfile  gen_doc.sh
doc/rtf/: refman.rtf
lib/: c11.c  cstr.c  cstr.h  err.c  err.h  image.c  log.c  log.h  middles.c  mpool.c  mpool.h  mux.c  mux.h  netcom.c  netcom.h  que.c  que.h  rand.c  rand.h  sha256.c  sha256.h  threads.h  threads_c11.c  threads_c11.h  threads_posix.h  thrq.c  thrq.h  timetick.c  timetick.h
timer/: timer.c  timer.h
tmp/: cpu-miner.c  miner.h  trigg.c
tty/: serial.c  serial.h  tty.c  tty.h
